--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,5 @@
+@import "https://www.nerdfonts.com/assets/css/webfont.css";
+
 * {
   box-sizing: border-box;
 }
@@ -11,18 +13,14 @@ html {
   line-height: 1.5;
   color: var(--text-950);
   background-color: var(--background-50);
-  height: 500vh;
 }
 
 @keyframes spin {
   0% {
-    transform: rotate(0deg) scale(1);
-  }
-  50% {
-    transform: rotate(180deg) scale(1.2);
+    transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg) scale(1);
+    transform: rotate(360deg);
   }
 }
 
